# compose

./: .gitignore  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  FPDF2_INTEGRATION_GUIDE.md  README.md  RENDERING_REBUILD_CHECKPOINT.md  USER_GUIDE.md  complete-showcase.md  compose.toml.example  compose.yml  debug_single_page.md  debug_single_page.toml  debug_symbols.py  engine.py  fpdf2_concrete_integration.py  fpdf2_integration_demo.py  list_fonts.py  notes.md  output.html  pyproject.toml  setup.py  tufte-config.toml
.agent/workflows/: code-quality.md
archive/: BOUNDING_BOX_ARCHITECTURE.md  BOUNDING_BOX_COMPARISON.md  CONSTRAINT_INTEGRATION_GUIDE.md  CONSTRAINT_LAYOUT_ARCHITECTURE.md  CONSTRAINT_LAYOUT_SYSTEM_COMPLETE.md  MIGRATION_EXAMPLES.md  PHASE1_IMPLEMENTATION_COMPLETE.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PHASE3_ADVANCED_FEATURES.md  REFACTORING_GUIDE.md  slides.toml  test_lint.md  typography_demo.md
archive/test-files/: academic_config.toml  advanced-features.md  advanced_math_config.toml  advanced_math_demo.md  complete_advanced_demo.md  complete_config.toml  complete_demo.md  compose.toml  compose.toml.example  compose_pdf.toml  comprehensive_test.md  debug.md  demo.toml  demo_advanced_features.py  demo_features.md  dense_config.toml  enhanced-test.md  final_math_test.md  frontmatter-demo.md  poster_config.toml  professional_pdf_config.toml  professional_pdf_demo.md  slides.md  slides.toml  test.md  test_ascii_math.md  test_blockquote.md  test_math.md  test_multiline.md  test_nested.md  test_table_bold.md
compose/: __init__.py  bibliography.py  cache_system.py  cli.py  cross_references.py  engine.py  linter.py  macro_system.py  microtypography.py  plugin_system.py  plugins.py  test_comprehensive.py  test_parser.py  tex_compatibility.py
compose/analysis/: document_analyzer.py
compose/layout/: __init__.py  box_model.py  font_metrics.py  knuth_plass.py  (+5 more)
compose_app/: __init__.py  cli.py  config.py  html_renderer.py  math_pdf_layout.py  pdf_renderer.py
example_project/: example.md  example.toml
examples/: test.html  test.md  tufte-config.toml  tufte.md
mistletoe/: archive.tgz  pyproject.toml
mistletoe/tests/: base_test.py  test_block_token.py  test_line_numbers.py
mistletoe/tests/test_contrib/: test_jira_renderer.py  test_xwiki20_renderer.py
parser/: config.py  markdown.py
plugins/: plugin_highlight.py
pytests/: test_advanced_features.py  test_advanced_math.py  test_block_elements.py  test_constraint_system.py  test_cross_references.py  test_diagram_engine.py  test_diagram_renderer.py  test_document_analyzer.py  test_enhanced_ast.py  test_html_parser.py  test_inline_formatting.py  test_large_operators.py  test_latex_nodes.py  test_latex_specs.py  test_latex_tokenizer.py  test_line_breaking.py  test_linter.py  test_macro_system.py  test_math_graphics.py  test_math_images.py  test_matrix_layout.py  test_multi_page.py  test_opentype_math.py  test_parser_basic.py  test_plugin_system.py  test_renderers.py  test_rendering_tracker.py  test_slide_engine.py  test_slide_renderer.py  test_tex_boxes.py  test_typography_engine.py  test_universal_layout.py
pytex/: .coverage  LICENSE  pyproject.toml
pytex/.katex_fixtures/: katex-dump.js
pytex/archive/dockers/fonts/: buildMetrics.sh
pytex/archive/src/fonts/: generate_fonts.py
pytex/archive/src/metrics/: mapping.py
pytex/dev_tools/katex_fixtures/: package-lock.json
pytex/fontTools/: __init__.pyi  ttLib.pyi
pytex/katex_fixtures/: fixtures.txt  katex-dump.js  package.json
pytex/pytex/: build_common.py  build_html.py  build_mathml.py  build_tree.py  define_environment.py  define_function.py  define_macro.py  delimiter.py  dom_tree.py  font_metrics.py  generate_macros_data.py  generate_symbols_data.py  lexer.py  macro_expander.py  macros.py  mathml_tree.py  options.py  parse_error.py  parse_node.py  parse_tree.py  parser.py  settings.py  spacing_data.py  stretchy.py  style.py  svg_geometry.py  symbols_data.py  token.py  tree.py  unicode_scripts.py  unicode_sup_or_sub.py  units.py  utils.py
pytex/pytex/environments/: __init__.py  array.py  cd.py
pytex/pytex/fonts/: generate_fonts.py  makeBlacker  makeFF
pytex/pytex/functions/: __init__.py  accent.py  accentunder.py  arrow.py  char.py  color.py  cr.py  def.py  delimsizing.py  enclose.py  environment.py  font.py  genfrac.py  hbox.py  horizBrace.py  href.py  html.py  htmlmathml.py  includegraphics.py  kern.py  lap.py  math.py  mathchoice.py  mclass.py  op.py  operatorname.py  ordgroup.py  overline.py  phantom.py  pmb.py  raisebox.py  relax.py  rule.py  sizing.py  smash.py  sqrt.py  styling.py  supsub.py  symbolsOp.py  symbolsOrd.py  (+6 more)
pytex/pytex/functions/utils/: assembleSupSub.py
pytex/pytex/katex/: __init__.py  api.py
pytex/pytex/metrics/: extract_tfms.py  extract_ttfs.py  mapping.py  parse_tfm.py
pytex/python/: build_common.py  build_html.py  build_tree.py  define_environment.py  define_function.py  define_macro.py  delimiter.py  dom_tree.py  environments.py  font_metrics_data.py  functions.py  macro_expander.py  macros_data.py  mathml_tree.py  namespace.py  options.py  source_location.py  spacing_data.py  style.py  svg_geometry.py  types.py  unicode_accents.py  unicode_symbols.py  units.py  utils.py  wide_character.py
pytex/python/environments/: array.py
pytex/python/functions/: accentunder.py  color.py  cr.py  delimsizing.py  environment.py  genfrac.py  horizBrace.py  html.py  htmlmathml.py  kern.py  lap.py  math.py  mathchoice.py  mclass.py  operatorname.py  phantom.py  pmb.py  sizing.py  styling.py  supsub.py  symbolsOrd.py  verb.py
pytex/python/functions/utils/: assembleSupSub.py
pytex/python/katex/: __init__.py
pytex/tests/: test_basic.py  test_build_and_cd.py  test_build_common_helpers.py  test_core_structures.py  test_end_to_end.py  test_environments.py  test_functions.py  test_integration.py  test_katex_compat_html.py  test_settings.py  test_utils_and_options.py
tests/: test_box_model.py  test_compose_app.py  test_font_metrics.py  test_integration.py  test_math_engine.py  test_math_pdf_layout.py  test_universal_layout.py
(+254 files in other folders)
