[tool.poetry]
name = "compose"
version = "0.1.0"
description = "Minimal Markdown typesetting system"
authors = ["rbf22 <rbf22@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
compose = "compose.cli:main"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.4.2"
fpdf2 = "^2.8.5"
matplotlib = "^3.10.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
