[tool.poetry]
name = "mistletoe"
version = "1.6.0.dev"
description = "A fast, extensible Markdown parser in pure Python."
authors = ["Mi Yu <hello@afteryu.me>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/miyuchina/mistletoe"
repository = "https://github.com/miyuchina/mistletoe"
keywords = ["markdown", "parser", "commonmark", "text", "markup"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
]

packages = [
    { include = "mistletoe" },
]

[tool.poetry.scripts]
mistletoe = "mistletoe.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.extras]
highlighting = ["pygments"]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
parameterized = "*"
pygments = ">=2.11.2,<=2.16"

[tool.flake8]
extend-ignore = "E124,E126,E127,E128,E501"
max-line-length = 127
max-complexity = 10

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
